# samui

./: .coveragerc  .eslintrc.cjs  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  LICENSE  README.md  app.spec  architecture.md  build.config.json  conda-lock.yml  environment-dev.yml  environment.yml  eslint.config.mjs  getJson.ts  jest.config.cjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  pyproject.toml  setupTest.cjs  setupTestBrowser.cjs  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.js  vitest.browser.config.ts  vitest.config.js  vitest.config.ts
.github/workflows/: data_prep.yml  dataprep.yml  gen_site.yml  humanpilot.yml  playwright.yml  release.yml  svelte_test.yml  test.yml
e2e/: annotation-import-export.spec.ts  config.ts  example.spec.ts  overlays.spec.ts  sample.spec.ts  urlState.spec.ts  utils.ts
e2e/pages/: index.ts  samuiPage.ts
loopy/: entrypoint.py  feature.py  gengene.py  gensample.py  gentiff.py  genvisium.py  image.py  logger.py  run_image.py  sample.py  server.py  utils.py
loopy/drivers/: image.py  run_image.py  run_spaceranger.py  spaceranger.py
loopy/gui/: app.py
loopy/spatial_io/: __init__.py  build.py  common.py  cosmx.py  files.py  preprocess.py  spatialdata.py  visium.py  visium_hd.py  xenium.py
loopy/utils/: cli.py  utils.py
nextflow/: .gitignore  CLAUDE.md  README.md  main.nf  nextflow.config
nextflow/context/: data-layouts.md
nextflow/docs/: formats.md  input-spec.md
nextflow/modules/: common.nf  preprocess.nf  site.nf
nextflow/test/: make_synthetic_data.py  serve_https.py
scripts/: fd.py  from_spaceranger.py  ourdata.py  process_humanpilot.py  process_image.py  process_merfish.py  process_visiumif.py  processimage.py  read_merfish.py  read_merfish2.py  run_sample.ipynb  run_sample.py
src/: app.css  app.d.ts  app.html  electron.cjs  global.d.ts  hooks.js  preload.cjs
src/lib/: colors.ts  dataHandlers.ts  definitions.ts  fetcher.ts  io.test.ts  io.ts  lru.ts  meh.ts  nav.svelte  searchLib.ts  store.svelte  store.ts  tiling.ts  utils.ts
src/lib/components/: Checkbox.svelte  CodeHighlight.svelte  DraggableNumber.svelte  ImportInstructionsDialog.svelte  buttonGroup.svelte  codeHighlight.ts  colorbar.svelte  darkswitch.svelte  dragdrop.svelte  featureSearchBox.svelte  fileInput.svelte  github.svelte  legend.svelte  legend.ts  list.svelte  modal.svelte  plus.svelte  sampleList.svelte  searchBox.svelte  spinner.svelte  splashbutton.svelte  squircle.svelte  veg.svelte
src/lib/data/: byod.test.ts  byod.ts  chunked.ts  coord.ts  dataHandlers.ts  features.ts  first.ts  image.ts  meh.ts  overlay.ts  preload.ts  processTiff.ts  sample.ts  schemas.ts  searchBox.ts  tiffCodecs.test.ts  tiffCodecs.ts  tiffImport.test.ts  tiffImport.ts  urlHandling.ts
src/lib/data/objects/: image.ts  (+5 more)
src/lib/mapp/: annotate.svelte  background.ts  colormap.ts  definitions.ts  imgControl.svelte  imgControl.ts  mapTools.svelte  maplib.ts  mapp.ts  overlay.ts  overlayTool.svelte  selectionBox.svelte  selector.ts  spots.ts
src/lib/scatter/: chartWorker.js  hoverChart.ts  mainChart.ts  scatterlib.ts
src/lib/sidebar/: Feedback.svelte  annotate.svelte  featureSearchBox.svelte  hoverableFeature.svelte  markdown.svelte  nav.svelte  recent.browser.test.ts  recent.svelte  searchBox.ts  section.svelte  status.svelte
src/lib/testing/: MappHarness.svelte  mappFixture.ts
src/lib/ui/: definitions.ts  mapp.browser.test.ts  mapp.test.ts  mapp.ts  urlState.test.ts  urlState.ts  utils.ts  webglcolor.ts
src/pages/: Modal.svelte  areaChart.ts  bar.svelte  histogram.ts  mainMap.browser.test.ts  mainMap.svelte  mapSample.svelte  mapTile.svelte  mapTile.ts  mapTools.svelte  mapp.svelte  mappOverlays.svelte  maps.svelte  plot.svelte  plotMini.svelte  ridgeline.ts  rna.svelte  scatter.svelte  scatterxy.svelte  sidebar.svelte  splash.svelte
src/preprocess/: feature.ts
src/routes/: +layout.svelte  +page.svelte  MainPage.svelte  __layout.svelte  index.svelte
src/routes/from/: +page.svelte
src/test/: ol-helpers.ts
src/types/: jpegxr.d.ts
static/: _headers
test-python/: test_gendata.py
tests/: test_feature.py  test_gendata.py  test_image.py  test_sample.py  test_spaceranger.py  test_utils.py  validate_cloud_optimized_geotiff.py
tests-examples/: demo-todo-app.spec.ts
(+61 files in other folders)
