[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loopy-browser"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL v3.0" }
authors = [
  { name = "Chaichontat Sriworarat", email = "34997334+chaichontat@users.noreply.github.com" },
]
dependencies = [
  "anndata",
  "numpy",
  "pandas",
  "pydantic>=1.10,<2",
  "PyQt5",
  "requests",
  "rich",
  "rich-click",
  "rasterio",
  "scanpy>=1.10",
  "scipy",
  "tifffile",
  "typing-extensions",
  "uv",
]

[project.scripts]
loopy = "loopy.entrypoint:cli"
samui = "loopy.entrypoint:cli"

[project.optional-dependencies]
geo = ["gdal==3.8.4"]
server = [
  # FastAPI versions <0.100 depend on Pydantic v1t
  "fastapi>=0.95,<0.100",
  "uvicorn[standard]>=0.20",
]

[dependency-groups]
dev = [
  "black",
  "conda-lock",
  "flake8",
  "hypothesis",
  "isort",
  "pytest",
  "pytest-cov",
  "PyQt5-stubs",
]

[tool.setuptools.packages.find]
include = ["loopy", "loopy.*"]

[tool.bandit]
exclude = "tests"
skips = ["B101", "B404", "B603", "B607"]
targets = "loopy"

[tool.black]
line-length = 110
target-version = ["py310"]

[tool.pyright]
include = ["loopy"]
pythonVersion = "3.10"
reportMissingTypeStubs = false
reportPrivateUsage = false
reportPropertyTypeMismatch = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUntypedFunctionDecorator = false
reportUnusedImport = false
reportUnusedVariable = "warning"
typeCheckingMode = "strict"

[tool.ruff]
line-length = 120

[tool.isort]
line_length = 110
profile = "black"
py_version = 310
src_paths = ["loopy"]

[tool.pytest.ini_options]
log_cli = true
# log_cli_level = "DEBUG"
minversion = "7.0"
testpaths = ["tests"]
